[package]
name = "win_binder"
version = "0.1.0"
authors = ["0xJWLabs <0xJWLabs@gmail.com>"]
edition = "2021"
description = "Listen and send keyboard and mouse events on Windows"
readme = "README.md"
keywords = ["input", "mouse", "testing", "keyboard", "automation", "windows"]
categories = ["development-tools::testing", "api-bindings", "hardware-support"]
license = "MIT"

[dependencies]
serde = { version = "1.0.215", features = ["derive"], optional = true }

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Foundation",
  "Foundation_Numerics",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
tokio = { version = "1.41.1", features = ["sync", "macros", "rt-multi-thread"] }

[features]
serialize = ["serde"]
unstable_grab = []
